--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,20 +1,45 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
+<app-header></app-header>
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="container">
+    <ion-grid>
+      <ion-row>
+        <ion-title>
+          Você não está sozinho
+        </ion-title>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+      </ion-row>
+
+      <ion-row style="margin-top: 10%;">
+        <ion-col><ion-button class="card-button" color="secondary"
+            [routerLink]="['/relaxation-center']">Relaxar</ion-button></ion-col>
+        <ion-col><ion-button class="card-button" color="secondary"
+            [routerLink]="['/dashboard']">Progresso</ion-button></ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col><ion-button class="card-button" color="secondary"
+            [routerLink]="['/lessons']">Lições</ion-button></ion-col>
+        <ion-col><ion-button class="card-button" color="secondary" [routerLink]="['/mood']">Meu
+            Humor</ion-button></ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col><ion-button class="card-button" color="secondary" [routerLink]="['/main-contact']">Meu
+            Anjo</ion-button></ion-col>
+        <ion-col><ion-button class="card-button" color="secondary"
+            [routerLink]="['/medical-contact']">Medicos</ion-button></ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col><ion-button class="card-button" color="secondary"
+            [routerLink]="['/notes']">Anotações</ion-button></ion-col>
+        <ion-col><ion-button class="card-button" color="secondary"
+            [routerLink]="['/settings']">Configurações</ion-button></ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
+  <app-panic-button></app-panic-button>
+
+
+  <!-- <div class="bottom">
+    <ion-button expand="block" (click)="logout()" >LogOut</ion-button>
+
+  </div> -->
 </ion-content>
