--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,27 +1,15 @@
-#container {
+.container{
   text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  margin-top: 10%;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.bottom{
+  padding: 0 60px 0 60px;
+  margin-top: 10%;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+.card-button{
+  height: 70px;
+    width: 100%;
+    --border-radius:40px;
 }
