feature/pages-and-designer

--- a/src/app/components/panic-button/panic-button.component.html
+++ b/src/app/components/panic-button/panic-button.component.html
@@ -1,3 +1,5 @@
 <div class="div-button">
-  <ion-button class="panic-button" color="danger" >SOS</ion-button>
+  <ion-button>
+    <img src="../../../assets/img/pngwing.com.png" alt="">
+  </ion-button>
 </div>
