--- a/src/app/components/panic-button/panic-button.component.scss
+++ b/src/app/components/panic-button/panic-button.component.scss
@@ -7,3 +7,16 @@
       width: 150px;
       --border-radius:150px;
   }
+
+  
+
+  ion-button{
+    --background:transparent;
+    --box-shadow:transparent;
+
+    
+  }
+
+  img{
+    height: 194px;
+  }
