--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -5,32 +5,34 @@
       <ion-row>
         <ion-title>
           Você não está sozinho
+          
+          
         </ion-title>
 
       </ion-row>
 
       <ion-row style="margin-top: 10%;">
-        <ion-col><ion-button class="card-button" color="secondary"
+        <ion-col><ion-button class="card-button"
             [routerLink]="['/relaxation-center']">Relaxar</ion-button></ion-col>
-        <ion-col><ion-button class="card-button" color="secondary"
+        <ion-col><ion-button class="card-button"
             [routerLink]="['/dashboard']">Progresso</ion-button></ion-col>
       </ion-row>
       <ion-row>
-        <ion-col><ion-button class="card-button" color="secondary"
+        <ion-col><ion-button class="card-button"
             [routerLink]="['/lessons']">Lições</ion-button></ion-col>
-        <ion-col><ion-button class="card-button" color="secondary" [routerLink]="['/mood']">Meu
+        <ion-col><ion-button class="card-button" [routerLink]="['/mood']">Meu
             Humor</ion-button></ion-col>
       </ion-row>
       <ion-row>
-        <ion-col><ion-button class="card-button" color="secondary" [routerLink]="['/main-contact']">Meu
+        <ion-col><ion-button class="card-button" [routerLink]="['/main-contact']">Meu
             Anjo</ion-button></ion-col>
-        <ion-col><ion-button class="card-button" color="secondary"
+        <ion-col><ion-button class="card-button"
             [routerLink]="['/medical-contact']">Medicos</ion-button></ion-col>
       </ion-row>
       <ion-row>
-        <ion-col><ion-button class="card-button" color="secondary"
+        <ion-col><ion-button class="card-button"
             [routerLink]="['/notes']">Anotações</ion-button></ion-col>
-        <ion-col><ion-button class="card-button" color="secondary"
+        <ion-col><ion-button class="card-button"
             [routerLink]="['/settings']">Configurações</ion-button></ion-col>
       </ion-row>
     </ion-grid>
