--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -1,9 +1,13 @@
 <ion-content [fullscreen]="true">
-  <div class="container">
-    <ion-img src="assets/BlueMonkey.png"></ion-img>
-    <!-- <ion-title>Explore your mind</ion-title> -->
+  <div class="container-text">
     <ion-title>Explore sua mente</ion-title>
   </div>
+  <div class="container">
+    <ion-img src="assets/img/blueTotal.png"></ion-img>
+    <!-- <ion-title>Explore your mind</ion-title> -->
+    <!-- <ion-title>Explore sua mente</ion-title> -->
+  </div>
+
 
   <ion-fab vertical="bottom" horizontal="end" style="margin-bottom: 30px;">
     <ion-fab-button [routerLink]="['/login']">
