--- a/src/app/pages/landing/landing.page.scss
+++ b/src/app/pages/landing/landing.page.scss
@@ -1,4 +1,13 @@
 .container{
     text-align: center;
-    margin-top: 50%;
+    display: block;
+    margin: auto;
+    margin-top: 10%;
+    width: 50%;
 }
+
+.container-text{
+    text-align: center;
+     margin-top: 50%;
+}
+
