--- a/src/app/components/panic-button/panic-button.component.html
+++ b/src/app/components/panic-button/panic-button.component.html
@@ -1,5 +1,11 @@
 <div class="div-button">
-  <ion-button>
+  <!-- <ion-button>
     <img src="../../../assets/img/pngwing.com.png" alt="">
-  </ion-button>
+  </ion-button> -->
+  <ion-fab vertical="bottom" horizontal="center" style="margin-bottom: 30px;">
+    <ion-button shape="round"  >
+      <!-- <ion-icon name="chevron-forward"></ion-icon> -->
+      <ion-label>Ações</ion-label>
+    </ion-button>
+  </ion-fab>
 </div>
