--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -10,8 +10,9 @@
 
 
   <ion-fab vertical="bottom" horizontal="end" style="margin-bottom: 30px;">
-    <ion-fab-button [routerLink]="['/login']">
-      <ion-icon name="chevron-forward"></ion-icon>
-    </ion-fab-button>
+    <ion-button fill="outline" shape="round" color="success" [routerLink]="['/login']">
+      <!-- <ion-icon name="chevron-forward"></ion-icon> -->
+      <ion-label>Acessar ></ion-label>
+    </ion-button>
   </ion-fab>
 </ion-content>
