--- a/src/app/pages/reset-password/reset-password.page.html
+++ b/src/app/pages/reset-password/reset-password.page.html
@@ -12,15 +12,15 @@
     <form>
       <div class="ion-padding">
         <ion-item>
-          <ion-input [(ngModel)]="email" placeholder="Digite seu email" class="input"></ion-input>
-          <ion-icon name="person-outline"></ion-icon>
+          <ion-input name="mail" [(ngModel)]="email" placeholder="Digite seu email" class="input"></ion-input>
+          <ion-icon name="mail-outline" slot="end"></ion-icon>
         </ion-item>
       </div>
     </form>
-    <ion-fab vertical="bottom" horizontal="end" style="margin-bottom: 30px;">
-      <ion-fab-button (click)="resetPassword">
-        <ion-icon name="chevron-forward"></ion-icon>
-      </ion-fab-button>
+    <ion-fab horizontal="center" style="margin-bottom: 10px;">
+      <ion-button shape="round" color="tertiary" (click)="resetPassword()">
+        <ion-label>Enviar ></ion-label>
+      </ion-button>
     </ion-fab>
   </div>
 </ion-content>
