--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,11 +5,11 @@
          <ion-title>
           <h1>User Name</h1>
         </ion-title></ion-col>
-      <ion-col>
+      <!-- <ion-col>
         <ion-button fill="outline" color="medium" aria-label="Favorite">
           <ion-icon horizontal="end" name="chevron-back"></ion-icon>
         </ion-button>
-      </ion-col>
+      </ion-col> -->
     </ion-row>
   </ion-toolbar>
 </ion-header>
