--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,30 +1,154 @@
-.container{
-  text-align: center;
-  margin-top: 10%;
-}
+// // .container-front {
+// //   text-align: center;
+// //   display: block;
+// //   margin: auto;
+// //   margin-top: 10%;
+// //   width: 50%;
+// // }
 
-.bottom{
-  padding: 0 60px 0 60px;
-  margin-top: 10%;
-}
+// .container-text {
+//   text-align: center;
+//   margin-top: 50%;
+// }
+
+// .container-a{
+//   text-align: center;
+// }
+
+// .container-b{
+//   text-align: center;
+//   margin-top: 10%;
+// }
+
+// .card{
+//   background-color: #fff;
+// 	border-radius: 10px;
+// 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+// 	padding: 20px;
+// 	margin: 20px;
+	
+// 	display: flex;
+// 	flex-direction: column;
+// 	align-items: center;
+// 	justify-content: center;
+// 	text-align: center;
+// }
+
+// ion-img{
+//   height: 175px;
+// }
+
+// .bottom{
+//   padding: 0 60px 0 60px;
+//   margin-top: 10%;
+// }
 
 .card-button{
   height: 60px;
     width: 100%;
     --border-radius:2px 40px 2px 40px ;
- 
-
 }
 
 ion-button{
   // --background:#e2c4e2;
-  --background:hsl(300, 34%, 83%) !important;
+  --background:hsl(0, 0%, 100%) !important;
   // --box-shadow:transparent;
+}
 
+ion-button {
+  height: 70px;
+  width: 100%;
+  --border-radius: 20px;
+}
+
+// // ion-title{
+// //   --background-image: url('../../../assets/img/papel.png');
+// // }
+// // // E:\workspace\mente-sa\src\assets\img\papel.png
+
+// // .relaxBtn {
+// //   color: #beeec4;
+// // }
+
+// .container-front{
+//   position: absolute;
+// }
+
+// .main-container{
+//   height: 100%;
+// }
+// .container-1{
+//   background: #7fd9ff;
+//   height: 100%;
+//   width: 100%;
+//   border-radius: 20px 0px 0px 20px;
+// }
+// .container-2{
+//   background: rgb(255, 255, 255);
+//   height: 100%;
+//   width: 100%;
+// }
+// ion-row{
+//   height: 100%;
+// }
+// ion-col{
+//   height: 100%;
+// }
+// ion-col{
+//   padding: 0;
+// }
+
+ion-content{
+--background:rgb(255, 255, 255);
+
+
+
+  #header{
+    position: relative;
+    width: 20%;
+    min-width: 60px;
+    padding: 0px;
+    list-style: none;
+    overflow: hidden;
+    background: #beeec4;
+    height: 100%;
+
+    #teste{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: fixed;
+      margin-top: 100px;
+      padding: 4px 20px 0 20px;
+    }
+    #test2{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: fixed;
+      margin-top: 400px;
+      padding: 4px 20px 0 20px;
+    }
+  }
   
-}
+  // #test2{
+  //   display: flex;
+  //   justify-content: space-between;
+  //   align-items: center;
+  //   position: fixed;
+  // margin-top: 100px;
+  // margin-left: 7%;
+  // }
+  #header2{
+    position: relative;
+    width: 20%;
+    min-width: 60px;
+    padding: 0px;
+    list-style: none;
+    overflow: hidden;
+    background: #7fd9ff;
+    height: 100%;
 
-ion-title{
-  --background-image: url('../../../assets/img/papel.png');
+
+  }
 }
-// E:\workspace\mente-sa\src\assets\img\papel.png
