--- a/src/app/pages/medical-contact/medical-contact.page.html
+++ b/src/app/pages/medical-contact/medical-contact.page.html
@@ -1,63 +1,70 @@
 <app-header></app-header>
 <ion-content [fullscreen]="true">
-  <form>
-    <div class="ion-padding">
-      <ion-grid>
-        <ion-row class="title">
-          <ion-col></ion-col>
-          <ion-col size="auto">
-            <div style="width: 180px"> Registre o profissional que lhe acompanha</div>
-          </ion-col>
-          <ion-col></ion-col>
-        </ion-row>
-        <ion-row style="margin-top: 15%;">
-          <ion-col>
-            <ion-item>
-              <ion-input label="Nome" class="nome"></ion-input>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-            <ion-item>
-              <ion-input label="E-mail" class="email"></ion-input>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-            <ion-item>
-              <ion-input label="Telefone" class="telefone"></ion-input>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-            <ion-item>
-              <ion-select label="Especialidade" placeholder="Especialidade">
-                <ion-select-option value="psiquiatra">Psiquiatria</ion-select-option>
-                <ion-select-option value="psicologa">Psicologia</ion-select-option>
-                <ion-select-option value="coach">Coach</ion-select-option>
-              </ion-select>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
+  <div class="container1">
+    <div class="card">
+      <ion-img src="assets/img/blueTotal.png"></ion-img>
     </div>
 
+  </div>
+  <div class="container1">
     <ion-grid>
       <ion-row>
         <ion-col>
-          <ion-button color="primary">Cadastrar</ion-button>
+          <ion-title>
+            Você não está sozinho
+          </ion-title>
         </ion-col>
-        <ion-col>
-          <ion-button color="primary">Voltar</ion-button>
-        </ion-col>
+
       </ion-row>
     </ion-grid>
-    
+  </div>
+  <!-- <ion-list *ngIf="!listMed">
+    <ion-item *ngFor="let item of [0,1,2]">
+      <ion-avatar slot="start">
+        <ion-skeleton-text animated></ion-skeleton-text>
+      </ion-avatar>
+      <ion-label>
+        <h3>
+          <ion-skeleton-text animated style="width: 50%;"></ion-skeleton-text>
+        </h3>
+        <p>
+          <ion-skeleton-text animated style="width: 50%;"></ion-skeleton-text>
+        </p>
+        <p>
+          <ion-skeleton-text animated style="width: 50%;"></ion-skeleton-text>
+        </p>
+      </ion-label>
+    </ion-item>
+  </ion-list> -->
 
-  </form>
-  
+  <ion-grid>
+    <ion-row>
+      <ion-col style="text-align: center;">
+        <ion-button style="--border-color: #25a139; color:#25a139" fill="outline"
+          [routerLink]="['/medical-register']">Add</ion-button>
+      </ion-col>
+      <ion-col style="text-align: center;">
+        <ion-button style="--border-color: #e21b1b; color:#e21b1b" fill="outline"
+          [routerLink]="['/home']">Voltar</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-list>
+    <ion-item-sliding *ngFor="let listMed of listMeds">
+      <ion-item>
+        <ion-label>
+            {{listMed.nome}}
+          <p>
+            {{listMed.telefone}}
+          </p>
+          <p>
+            {{listMed.email}}
+          </p>
+        </ion-label>
+      </ion-item>
+
+    </ion-item-sliding>
+
+  </ion-list>
+  <!-- <app-panic-button></app-panic-button> -->
 </ion-content>
-<app-panic-button></app-panic-button>
