--- a/src/app/pages/medical-contact/medical-contact.page.scss
+++ b/src/app/pages/medical-contact/medical-contact.page.scss
@@ -7,5 +7,46 @@ ion-item{
 }
 
 ion-button{
-    width: 100%;
+    width: 60%;
+    height: 60px;
+    --border-radius: 20px;
 }
+
+.container {
+    text-align: center;
+    display: block;
+    margin: auto;
+    margin-top: 10%;
+    width: 50%;
+  }
+  
+  .container-text {
+    text-align: center;
+    margin-top: 50%;
+  }
+  
+  .container1{
+    text-align: center;
+  }
+  
+  .container2{
+    text-align: center;
+    margin-top: 10%;
+  }
+  
+  .card{
+          background-color: #fff;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+      padding: 20px;
+      margin: 20px;
+       display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+  }
+  
+  ion-img{
+    height: 175px;
+  }
