--- a/src/app/pages/medical-contact/medical-contact.page.html
+++ b/src/app/pages/medical-contact/medical-contact.page.html
@@ -18,7 +18,7 @@
       </ion-row>
     </ion-grid>
   </div>
-  <!-- <ion-list *ngIf="!listMed">
+  <ion-list *ngIf="!listMeds">
     <ion-item *ngFor="let item of [0,1,2]">
       <ion-avatar slot="start">
         <ion-skeleton-text animated></ion-skeleton-text>
@@ -35,20 +35,9 @@
         </p>
       </ion-label>
     </ion-item>
-  </ion-list> -->
+  </ion-list>
 
-  <ion-grid>
-    <ion-row>
-      <ion-col style="text-align: center;">
-        <ion-button style="--border-color: #25a139; color:#25a139" fill="outline"
-          [routerLink]="['/medical-register']">Add</ion-button>
-      </ion-col>
-      <ion-col style="text-align: center;">
-        <ion-button style="--border-color: #e21b1b; color:#e21b1b" fill="outline"
-          [routerLink]="['/home']">Voltar</ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+
   <ion-list>
     <ion-item-sliding *ngFor="let listMed of listMeds">
       <ion-item>
@@ -66,5 +55,17 @@
     </ion-item-sliding>
 
   </ion-list>
+  <ion-grid>
+    <ion-row>
+      <ion-col style="text-align: center;">
+        <ion-button style="--border-color: #25a139; color:#25a139" fill="outline"
+          [routerLink]="['/medical-register']">Add</ion-button>
+      </ion-col>
+      <ion-col style="text-align: center;">
+        <ion-button style="--border-color: #e21b1b; color:#e21b1b" fill="outline"
+          [routerLink]="['/home']">Voltar</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
   <!-- <app-panic-button></app-panic-button> -->
 </ion-content>
