--- a/src/app/pages/main-contact/main-contact.page.html
+++ b/src/app/pages/main-contact/main-contact.page.html
@@ -18,8 +18,8 @@
           </ion-row>
         </ion-grid>
       </div>
-        <!-- <ion-list *ngIf="!medicalContact.lenght"> -->
-  <ion-list>
+        <ion-list *ngIf="!mainContacts">
+  <!-- <ion-list> -->
     <ion-item *ngFor="let item of [0]">
       <ion-avatar slot="start">
         <ion-skeleton-text animated></ion-skeleton-text>
@@ -37,6 +37,23 @@
       </ion-label>
     </ion-item>
   </ion-list>
+  <ion-list>
+    <ion-item-sliding *ngFor="let mainContact of mainContacts">
+      <ion-item>
+        <ion-label>
+            {{mainContact.nome}}
+          <p>
+            {{mainContact.telefone}}
+          </p>
+          <p>
+            {{mainContact.email}}
+          </p>
+        </ion-label>
+      </ion-item>
+
+    </ion-item-sliding>
+
+  </ion-list>
       <ion-grid>
         <ion-row>
           <ion-col style="text-align: center;">
@@ -47,5 +64,5 @@
           </ion-col>
         </ion-row>
       </ion-grid>
-<app-panic-button></app-panic-button>
+<!-- <app-panic-button></app-panic-button> -->
 </ion-content>
