user-register page

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,15 +1,22 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
     <ion-row>
-      <ion-col>
-         <ion-title>
-          <h1>User Name</h1>
-        </ion-title></ion-col>
-      <!-- <ion-col>
-        <ion-button fill="outline" color="medium" aria-label="Favorite">
-          <ion-icon horizontal="end" name="chevron-back"></ion-icon>
-        </ion-button>
+      <ion-col size="12">
+        <div class="img">
+          <img src="../../../assets/img/perfil.webp" alt="Avatar" class="avatar">
+        </div>
+        
+      </ion-col>
+      <!-- <ion-col size="2">
+  
+      </ion-col>
+      <ion-col size="5">
+        <div class="img">
+          <img src="../../../assets/BlueMonkey.png" alt="Avatar" class="avatar">
+        </div>
+        
       </ion-col> -->
+      
+      <ion-col size="12">
+        <h3><b style="color: #075d72;">User Name</b></h3>
+      </ion-col>
+  
     </ion-row>
-  </ion-toolbar>
-</ion-header>
