--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -58,10 +58,10 @@
             <ion-label>Médicos</ion-label>
           </ion-col>
           <ion-col>
-            <ion-button style="--border-color: #beeec4;" fill="outline" [routerLink]="['/notes']">
+            <ion-button style="--border-color: #beeec4;" fill="outline" [routerLink]="['/user-register']">
               <ion-icon src="../../../assets/icon/paperclip-solid.svg" slot="icon-only"></ion-icon>
             </ion-button>
-            <ion-label>Notas</ion-label>
+            <ion-label>Config</ion-label>
           </ion-col>
           <!-- <ion-col>
             <ion-button style="--border-color: #beeec4;" fill="outline" [routerLink]="['/settings']">
