--- a/src/app/pages/medical-contact/medical-register/medical-register.page.html
+++ b/src/app/pages/medical-contact/medical-register/medical-register.page.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<!-- <app-header></app-header>
 <ion-content [fullscreen]="true">
   <form>
     <div class="ion-padding">
@@ -53,7 +53,7 @@
           <ion-button style="--border-color: #25a139;" fill="outline">Cadastrar</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button style="--border-color: #25a139;" fill="outline"  [routerLink]="['/medical-contact']">Voltar</ion-button>
+          <ion-button style="--border-color: #25a139;" fill="outline"  >Voltar</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -61,5 +61,4 @@
 
   </form>
   
-</ion-content>
-<app-panic-button></app-panic-button>
+</ion-content> -->
