--- a/src/app/pages/main-contact/main-register/main-register.page.html
+++ b/src/app/pages/main-contact/main-register/main-register.page.html
@@ -1,5 +1,7 @@
-<app-header></app-header>
 <ion-content [fullscreen]="true">
+  <div class="container">
+
+  <app-header></app-header>
   <form>
     <div class="ion-padding">
       <ion-grid>
@@ -51,12 +53,14 @@
           <ion-button style="--border-color: #25a139; color:#25a139" fill="outline" [routerLink]="['/medical-register']">Add</ion-button>
         </ion-col>
         <ion-col style="text-align: center;">
-          <ion-button style="--border-color: #e21b1b; color:#e21b1b" fill="outline"  [routerLink]="['/home']">Voltar</ion-button>
+          <ion-button style="--border-color: #e21b1b; color:#e21b1b" fill="outline"  [routerLink]="['/user-register']">Voltar</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
     
 
   </form>
-  <app-panic-button></app-panic-button>
+  <!-- <app-panic-button></app-panic-button> -->
+</div>
 </ion-content>
+
