--- a/src/app/pages/user-register/user-register.page.scss
+++ b/src/app/pages/user-register/user-register.page.scss
@@ -1,17 +1,3 @@
-.title{
-    text-align: center;
-}
-
-ion-item{
-    --border-radius:10px;
-}
-
-ion-button{
-    width: 60%;
-    height: 60px;
-    --border-radius: 20px;
-}
-
 .container {
     text-align: center;
    padding: 0px 10px 0px 10px;
@@ -25,3 +11,9 @@ ion-button{
     border: 1px solid #8c8c8c;
     border-radius: 50%;
   }
+
+  .action-button{
+    width: 60%;
+    height: 60px;
+    --border-radius: 20px;
+}
