--- a/src/app/pages/user-register/user-register.page.html
+++ b/src/app/pages/user-register/user-register.page.html
@@ -50,7 +50,7 @@
             name="add-outline"></ion-icon>Cadastrar Anjo-da-Guarda</ion-button>
       </ion-item>
       <ion-item>
-        <ion-button fill="clear" [routerLink]="['/main-contact/register']"><ion-icon slot="start"
+        <ion-button fill="clear" [routerLink]="['/medical-contact/register']"><ion-icon slot="start"
             name="add-outline"></ion-icon>Cadastrar Contatos Médicos</ion-button>
       </ion-item>
       <ion-item>
